# QEPPlib

./: .gitignore  Makefile  changelog  configure  make.inc
inc/qepp/: functions.h  mpi_base.h  mpi_base.h~  my_lapack.h  other.h  qepp_constants.h  qepp_err.h  qepp_file.h  qepp_function.h  qepp_input.h  qepp_io.h  qepp_main.h  qepp_main.h~  qepp_mem.h  qepp_mem.h~  qepp_mpi.h  qepp_mpi.h~  qepp_read.h  qepp_struct.h  qepp_struct.h~  wrapper_libxml.h
install/: aclocal.m4  config.status  configure  configure.ac  configure.msg  configure.msg.in  configure.scan  make.inc.in
install/m4/: ax_ext_lib.m4
qeppbash/: __init__.py  functions.py  loader.py  structures.py  utils.py
qeppbash/tools/: __init__.py  pdos_char.py  smallest_gap.py  sum_pdos.py
src/: band_data.c  bands_pp.c  cd.c  data_file.c  evc.c  function_eps_calc.c  function_eps_kk.c  function_nscf_data.c  function_opt_data.c  function_wf_pp.c  functions.c  m_elem.c  mpi_base.c  mpi_base.c~  my_lapack.c  nscf_md.c  opt_data.c  other.c  qepp_err.c  qepp_file.c  qepp_file.c~  qepp_input.c  qepp_io.c  qepp_io.c~  qepp_main.c  qepp_main.c~  qepp_mem.c  qepp_mpi.c  qepp_mpi.c~  qepp_output.c  qepp_read.c  qepp_read.c~  qepp_struct.c  spin_data.c  spin_data.c~  struct_band_data.c  struct_bands_pp.c  struct_cd.c  struct_data_file.c  struct_data_set.c  (+16 more)
tools/: qepp_cd.gnu  qepp_plotband.gnu  qepp_plotband_spin.x
